[block-count-up] Prevent counter from jumping when counting.

--- a/src/block/count-up/style.scss
+++ b/src/block/count-up/style.scss
@@ -23,6 +23,7 @@
 	.ugb-countup__counter {
 		font-size: 40px;
 		line-height: 1em;
+		white-space: nowrap; // Prevent counting from jumping to the next line.
 	}
 
 	.ugb-countup__icon {
